--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "mobilejazz/yii2-oauth2-server",
+    "name": "myworkup/yii2-oauth2-server",
     "description": "OAuth2 Server for PHP",
     "keywords": ["yii", "extension", "widget"],
-    "homepage": "https://github.com/mobilejazz/yii2-oauth2-server",
+    "homepage": "https://github.com/myworkup/yii2-oauth2-server",
     "type": "yii2-extension",
     "license": "MIT",
     "support": {
-        "email": "info@mobilejazz.com",
-        "source": "https://github.com/mobilejazz/yii2-oauth2-server"
+        "email": "it@myworkup.net",
+        "source": "https://github.com/myworkup/yii2-oauth2-server"
     },
     "authors": [
         {
@@ -15,8 +15,8 @@
             "email": "imaliy.filsh@gmail.com"
         },
         {
-            "name": "Mobile Jazz",
-            "email": "info@mobilejazz.com"
+            "name": "myworkup",
+            "email": "it@myworkup.net"
         }
     ],
     "require": {
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "mobilejazz\\yii2\\oauth2server\\": ""
+            "myworkup\\yii2\\oauth2server\\": ""
         }
     },
     "version":"2.1.0"
